# kumir2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  setup.bat  subdirs-disabled-2.1.0.txt  subdirs-disabled-master.txt
cmake/kumir2/: kumir2_common.cmake  kumir2_linux.cmake
scripts/: gen_actor_source.py  query_version_info.py
src/actors/_attachment/: CMakeLists.txt  _attachment.json  _attachmentmodule.cpp  _attachmentmodule.h
src/actors/_event/: _event.json
src/actors/_message/: CMakeLists.txt  _message.json  _messagemodule.cpp  _messagemodule.h
src/actors/dynamic/: CMakeLists.txt  dynamic.json  dynamicmodule.cpp  dynamicmodule.h
src/actors/http/: CMakeLists.txt  http.json  httpmodule.cpp  httpmodule.h
src/actors/vk/: CMakeLists.txt  vk.json  vkmodule.cpp  vkmodule.h
src/app/: CMakeLists.txt  kumir2-launcher.cpp
src/app/kumir2-llvmc/: CMakeLists.txt
src/kumir2-libs/extensionsystem/: CMakeLists.txt  pluginmanager_impl.cpp
src/plugins/: CMakeLists.txt
src/plugins/llvmcodegenerator/: CMakeLists.txt  llvm_function_11.0.cpp  llvm_module_11.0.cpp  llvmcodegeneratorplugin.cpp  llvmcodegeneratorplugin.h  llvmgenerator.cpp  llvmgenerator.h  stdlib_c.cpp  stdlib_c.h
userdocs/: ActorDynamic.xml  ActorHTTP.xml  ActorVK.xml  Actor_Attachment.xml  Actor_Message.xml
